tests/fixtures/valid/layout/wrapped_ternary.pine
//@version=6
indicator("Wrapped ternary")
c = close > open ?
  color.green :
  color.red
plot(close, color = c)
