tests/fixtures/invalid/strategy_when.pine
//@version=6
strategy("Bad")
strategy.entry("L", strategy.long, when = close > open)
